mobile.css
@media (max-width: 954px){
    body{
        width: 934px;
    }

    .navbar{
        max-width: 100%;
        padding: 0 25px;
    }

    /* .navbar .fa-bars{
        display: none;
    } */

    .nav-items{
        padding: 0 10px;
    }

    .nav-items a{
        font-size: 15px;
    }

    .navbar .fa-bars,
    .navbar-collapse .sidebar-logo .fa-xmark,
    .navbar-collapse .sidebar-logo .logo_ttcm{
       display: none;
    }

    .sign-up{
        width: 904px;
        height: 161px;
        display: block;
        text-align: center;
        padding: 30px 15px 42px 15px;
    }

}

@media (max-width: 900px){

    nav .navbar .navbar-collapse{
        display: block;
        background: #3e8da8;
        position: fixed;
        top: 0;
        left: -100%;
        z-index: 1000;
        max-width: 270px;
        width: 100%;
        padding: 20px;
        line-height: 40px;
        transition: all 0.5s ease;
    }

    nav .navbar .navbar-collapse .sidebar-logo{
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .navbar-collapse .sidebar-logo .logo_ttcm{
        display: block;
        color: #fff;
        font-size: 25px;
    }

    .navbar .fa-bars,
    .navbar-collapse .sidebar-logo .fa-xmark{
        color: #fff;
        font-size: 25px;
        display: block;
    }

    .navbar ul{
        display: block;
        margin-top: 20px;
    }

    .nav-links li{
        display: block;
    }

    .nav-links .dropdown-menu{
        display: none;
        position: relative;
        top: 0;
        left: -20px;
        box-shadow: none;
        background-color: transparent;

    }

    .nav-links .dropdown-menu li{
        border-bottom: none;
    }
    
    .nav-items:hover .menu1,
    .nav-items:hover .menu2,
    .nav-items:hover .menu3,
    .nav-items:hover .menu4{
        display: none;
    }

    /* .nav-items .fa-caret-down{
        line-height: 40px;
    }
    
    .nav-items:hover .fas{
        transform: rotate(0deg);
    } */

    .navbar .navbar-collapse.show1 .nav-links .dropdown-menu.arrow1{
        display: block;
    }

    .overview{
        height: 70vh;
    }
    
    .overview .wlcm-txt{
        padding: 0 15px;
        padding-top: 50px;
    }

    .overview .wlcm-txt h1{
        font-size: 34px;
    }

    .overview .wlcm-txt p{
        font-size: 22px;
    }

}


@media (max-width: 770px){
    .overview{
        height: 70vh;
    }
    
    .overview .wlcm-txt{
        padding-top: 50px;
    }

    .overview .wlcm-txt h1{
        font-size: 34px;
    }

    .overview .wlcm-txt p{
        font-size: 18px;
        padding-bottom: 14px;
    }
    
    .sermons-section{
        max-width: 100%;
        padding: 4px;
    }

    .sermons-section .top .cross-para{
        margin: 0;
        margin-bottom: 8px;
    }

    .sermon-boxes{
        margin: 0;
        display: grid;
        background-image: none;
    }

    .top-box,
    .bottom-box{
        display: block;
        justify-content: center;
        width: 100%;
    }

}

@media (max-width: 500px){
    /* body{
        margin: 0 20px;
    } */
    .overview{
        height: 70vh;
    }
    
    .overview .wlcm-txt{
        padding-top: 50px;
    }

    .overview .wlcm-txt h1{
        font-size: 34px;
    }

    .overview .wlcm-txt p{
        font-size: 18px;
        padding-bottom: 0px;
    }
    
    .sermon-boxes{
        margin: 0;
        display: grid;
        background-image: none;
        justify-content: center;
    }

    .top-box,
    .bottom-box{
        display: block;
        justify-content: center;
        width: 100%;
    }

    .box{
        width: 100%;
    }

    .sermons-section .top .cross-para{
        margin: 0;
        margin-bottom: 30px;
    }

    .latest-sermon{
        display: block;
    }

    .img-latest{
        position: relative;
        width: 90%;
        margin: 0 auto;
    }

    .img-latest .help-number{
        background-color: #fff;
        border-radius: 6px 6px 6px 6px;
        padding: 20px 26px 17px 26px;
        position: absolute;
        right: 1.5rem;
        bottom: 4rem;
        z-index: 22;
        align-self: flex-end;
    }
    
    .img-latest .help-number p{
        font-size: 24px;
    }
    
    .img-latest .help-number span{    
        font-size: 24px;
    }
        
    .para-latest{
        margin: 20px 0 0 0;
        width: 100%;
        text-align: center;
        /* align-items: center;
        align-content: center; */
    }
        
    .para-latest h1{
        font-size: 26px;
        line-height: 1.4em;
    }

    .para-latest p{
        font-size: 14px;
    }

    /* Footer */
    .sign-up{
        margin: 0 auto;
        width: 100%;
        height: 204px;
        justify-content: center;
        border-radius: 50px;
    }

    .sign-up .form{
        width: 100%;
    }

    .sign-up p{
        font-size: 20px;
        padding: 0 0 15px 0;
    }

    .sign-up .form input{
        padding: 11px 15px 10px 15px;
        width: 100%;
        /* min-height: 42px; */
    }
    
    .sign-up .form button{
        width: 100%;
        padding: 11px 15px 10px 15px;
        margin: 10px 0px 0px 0px;
        border-radius: 90px;
    }

    /* Footer Content */

    .footer-nav{
        display: block;
    }
    
    /* Short Links */
    .short-links{
        width: 100%;
        margin: 33px 15px 0px 15px;
    }

    .short-links h2{
        font-size: 21px;
    }

    .lists{
        justify-content: space-around;
        margin-left: -55px;
    }

    .lists ul li{
        font-size: 16px;
    }
    
    /* Contact Us */
    .contact-us{
        margin: 30px 15px 0px 15px;
    }

    .contact-us h2{
        font-size: 21px;
        font-weight: 500;
    }

    .telephone img,
    .location img{
        font-size: 25px;
    }

    .telephone p,
    .location p{
        font-size: 16px;
    }

    
}


@media (max-width: 330px){
    .overview .wlcm-txt{
        padding-top: 0;
    }

    .sermons-section{
        max-width: 100%;
        padding: 4px;
    }

    .sermons-section .top .cross-para{
        margin: 0;
        margin-bottom: 8px;
    }

    
    .sermon-boxes{
        display: block;
        margin: 0;
        max-width: 100%;
        background-image: none;
    }

    
    .sermon-boxes .box{
        margin: 0;
        width: 100%;
        margin-bottom: 10px;
    }

}

